[SCRUM-66] FIX
